source/blender/blenkernel/intern/node.c
@@ -172,6 +172,12 @@ static void ntree_set_typeinfo(bNodeTree *ntree, bNodeTreeType *typeinfo)
 
 static void node_set_typeinfo(const struct bContext *C, bNodeTree *ntree, bNode *node, bNodeType *typeinfo)
 {
+	/* for nodes saved in older versions storage can get lost, make undefined then */
+	if (node->flag & NODE_INIT) {
+		if (typeinfo->storagename[0] && !node->storage)
+			typeinfo = NULL;
+	}
+	
 	if (typeinfo) {
 		node->typeinfo = typeinfo;
 		
